--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-knobs": "^5.2.1",
     "@storybook/addon-links": "^5.2.1",
     "@storybook/addon-storyshots": "^5.2.1",
     "@storybook/addon-storyshots-puppeteer": "^5.2.1",
     "@storybook/addons": "^5.2.1",
     "@storybook/react": "^5.2.1",
+    "@storybook/theming": "^5.2.1",
     "babel-plugin-macros": "^2.6.1",
     "react-test-renderer": "^16.10.2",
     "require-context.macro": "^1.2.2"
